use pin 0.7 as interrupt input, with 7M5 Ome pull up register

--- a/VoiceAlarm/N76E003_BSP_Keil_C51_V1.0.6/Sample_Code/Pin_Interrupt/Nu_Link_8051_Driver.ini
+++ b/VoiceAlarm/N76E003_BSP_Keil_C51_V1.0.6/Sample_Code/Pin_Interrupt/Nu_Link_8051_Driver.ini
@@ -1,9 +1,9 @@
 [Version]
 Nu_LinkVersion=V1.0
 [Process]
-ProcessID=0x00000cd0
-ProcessCreationTime_L=0x1b70b616
-ProcessCreationTime_H=0x01d44f36
+ProcessID=0x00001714
+ProcessCreationTime_L=0xf6991a85
+ProcessCreationTime_H=0x01d450bb
 NuLinkID=0x77883d65
 NuLinkIDs_Count=0x00000001
 NuLinkID0=0x77883d65
